v2.108.7 Fixed a bug caused by not wrapping a long word exceeding the screen width.

--- a/client/src/Pages/OrganizerPublic/OrganizerPublicLayout.module.css
+++ b/client/src/Pages/OrganizerPublic/OrganizerPublicLayout.module.css
@@ -6,6 +6,10 @@
   align-items: start;
   gap: 25px;
 }
+.main {
+  word-break: break-word;
+  overflow-wrap: break-word;
+}
 .spacer__header {
   margin-bottom: 10px;
 }
